# voice-stt

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/client-gradio/: Dockerfile  client_app.py
src/fastapi/: Dockerfile  api_server.py
src/standelone/: Dockerfile  gradio_app.py
stt_engine/: __init__.py  stt_engine.py
tests/: test_fastapi_api.py  test_stt_engine.py
